# os_lab_4_12

./: CMakeLists.txt  README.md  client.cpp  server.cpp  shared.cpp  shared.h
test/: zsh.sh
